Added TestPage and redesign multiple layouts
- Introduced a new `TestPage` with XAML and code-behind.
- Updated `AppShell.xaml` to include `TestPage` in navigation.
- Modified `MauiHello.csproj` to compile the new `TestPage.xaml`.
- Replaced `VerticalStackLayout` with a `Grid` in `BoxViews.xaml` for improved layout.
- Redesigned `TipCalculator.xaml` to use a `Grid` for better organization of UI elements.
- Updated `VerticalStackLayout.xaml` to utilize a `Grid` for enhanced content structure.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="Views\NotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\TestPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\TipCalculator.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
