Refactor navigation and add feedback functionality
- Removed "About" page from AppShell.xaml; added "Test Page".
- Updated MauiHello.csproj to include FeedbackPage.xaml.
- Added "About" and "Feedback" toolbar items in MainPage.xaml.
- Implemented event handlers for toolbar items in MainPage.xaml.cs.
- Rewrote TestPage.xaml with a new grid-based calculator layout.
- Created FeedbackPage.xaml for user feedback submission.
- Added logic for feedback handling in FeedbackPage.xaml.cs.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="Views\CustomRegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\FeedbackPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\NotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
