Refactor navigation and add new SVG icons
Updated `AppShell.xaml` to implement a new `FlyoutItem` structure with multiple `ShellContent` items for improved navigation. Removed commented-out items for clarity.

Modified `MauiHello.csproj` to include new font assets for SVG icons, enhancing the app's visual representation.

Added new SVG files: `book.svg`, `calculator.svg`, `coins.svg`, `file.svg`, `house.svg`, `layer.svg`, `user.svg`, and `vial.svg` for use in the application.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -60,6 +60,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiFont Include="Resources\Images\book.svg" />
+	  <MauiFont Include="Resources\Images\calculator.svg" />
+	  <MauiFont Include="Resources\Images\coins.svg" />
+	  <MauiFont Include="Resources\Images\file.svg" />
+	  <MauiFont Include="Resources\Images\house.svg" />
+	  <MauiFont Include="Resources\Images\user.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
 	</ItemGroup>
