Added DetailsPage and enhance FeedbackPage functionality
- Registered a new route for `DetailsPage` in `AppShell.xaml.cs`.
- Included `DetailsPage.xaml` in the project file for compilation.
- Redesigned `FeedbackPage.xaml` to use a `ScrollView` and added fields for person information.
- Updated `FeedbackPage.xaml.cs` to handle navigation and validate user input.
- Added a currency selection button in `TipCalculator.xaml` and updated its logic in `TipCalculator.xaml.cs`.
- Created a new `Person` class to encapsulate user data.
- Implemented `DetailsPage.xaml` for displaying user information and a welcome message.
- Developed logic in `DetailsPage.xaml.cs` to manage user data and navigation.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -89,6 +89,9 @@
 	  <MauiXaml Update="Views\CustomRegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\DetailsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\FeedbackPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
