Added unit tests and enhance UI and data handling
Updated solution to include `MauiHello.Tests` project for unit testing.
Modified `MauiHello.csproj` to add new XAML files for settings and shop pages.
Enhanced `Tip.cs` with properties for decimal calculations and improved input validation.
Updated `TipCalculator.xaml` for better UI and added converters for data binding.
Introduced `ValueConverters.cs` for various formatting and validation tasks.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -124,4 +124,13 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Views\SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </None>
+	  <None Update="Views\ShopPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </None>
+	</ItemGroup>
+
 </Project>
