Removed tests and added Switch Demo page with converters
- Removed `MauiHello.Tests.csproj`, eliminating the test project.
- Added new `ShellContent` for "Switch Demo" in `AppShell.xaml`.
- Introduced `BoolToObjectConverter<T>` in `ValueConverters.cs` for dynamic object conversion based on boolean values.
- Updated `MauiHello.csproj` to include `SwitchDemoPage.xaml`.
- Created `SwitchDemoPage.xaml` to demonstrate switch usage with value converters.
- Added code-behind file `SwitchDemoPage.xaml.cs` to initialize the new page.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
@@ -108,6 +108,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ShopPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\SwitchDemoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\TestPage.xaml">
