Added MonkeyDetailsPage and related view model
- Registered new route for MonkeyDetailsPage in AppShell.
- Included MonkeyDetailsPage.xaml in the project file.
- Registered MonkeyDetailsPage and its view model for dependency injection.
- Enhanced BaseViewModel with IsRefreshing property and SetProperty method.
- Updated MainPageViewModel to include navigation command to MonkeyDetailsPage.
- Revamped MainPage.xaml with RefreshView and improved layout for monkey data.
- Overrode OnAppearing in MainPage.xaml.cs to fetch monkeys automatically.
- Created MonkeyDetailsPageViewModel to manage selected monkey data.
- Added MonkeyDetailsPage.xaml for displaying monkey details.
- Implemented binding context in MonkeyDetailsPage.xaml.cs.

--- a/MauiHello/MauiHello.csproj
+++ b/MauiHello/MauiHello.csproj
@@ -101,6 +101,9 @@
 	  <MauiXaml Update="Views\FeedbackPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\MonkeyDetailsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\NotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
